# solar_forecasting

./: .gitattributes  README.md  clear_sky_forecasting.ipynb  clear_sky_model.py  main.py  partial_shadding_detection.py  point_forecast_prediction  point_forecast_prediction.py  probabilisitic_forecast.ipynb  pyproject.toml  run_forecast.py  system_efficiency.py  train_forecast.py
Resources/: pydantic_models.py
api/: app.py
configs/: default_config.yaml
data/: merged_data.csv  ninja_pv_48.1495_11.5700_corrected.csv  weather_data.csv
data/processed/: clear_sky_result.csv  point_forecast_results.csv  system_efficient_results.csv
data/raw/: pv_data.csv  weather_data.csv
models/: forecast_model_20250711_113914.pkl  forecast_model_20250711_120057.pkl  point_forecast_model.pkl
notebooks/: clear_sky_forecasting.ipynb  eda_dataset_1.ipynb  evaluation_point_forecast.ipynb  evaluation_probabilistic_forecast.ipynb  merge_data_exploration.ipynb  point_forecast_prediction.ipynb  probabilisitic_forecast.ipynb  pv_data_exploration.ipynb  solar_weather_data.csv  system_efficiency.ipynb  train_pv_forecasting.ipynb  weather_data_exploration.ipynb
scripts/: clear_sky_model.py  download_weather_data.py  partial_shadding_detection.py  plant_config.py  point_forecast_prediction.py  probabilistic_forecast.py  utils.py
solar_forecasting/: clear_sky_model.py  download_weather_data.py  plant_config.py  point_forecast_prediction.py  probabilistic_forecast.py  run_forecast.py  system_efficiency.py  utils.py
tests/: test_clear_sky_model.py  test_dowload_weather_data.py  test_partial_shading_detection.py  test_point_forecast_predicition.py  test_probabilistic_forecast.py  test_system_efficiency.py  test_utils.py
