[tool.poetry]
name = "solar-forecasting"
version = "0.1.0"
description = "Probabilistic and point forecasting for photovoltaic systems"
authors = ["David Quispe <david.quispe@tum.de>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "solar_forecasting" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=6.29.5,<7.0.0"
matplotlib = ">=3.10.1,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
pvlib = ">=0.12.0,<0.13.0"
seaborn = ">=0.13.2,<0.14.0"
ace-tools = ">=0.0,<0.1"
ipympl = ">=0.9.7,<0.10.0"
tqdm = ">=4.67.1,<5.0.0"
pydantic = "^2.11.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.3"
isort = "^5.12"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"